2010-01-09  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferParamsArrayForVariableArgumentsRule.cs: New rule to warn
	about methods using the vararg calling convention and not used 
	for interoperability purpose.

2009-07-17  Jesse Jones  <jesjones@mindspring.com>

	* GetEntryAssemblyMayReturnNullRule.cs, DisableDebuggingCodeRule.cs: 
	Rewrote descriptions.

2009-07-01  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-02-17  Jesse Jones  <jesjones@mindspring.com>

	* OnlyUseDisposeForIDisposableTypesRule.cs, Makefile.am: 
	Added new rule.

2009-01-30  Jb Evain  <jbevain@novell.com>

	* Makefile.am: add new DoNotUseEnumIsAssignableFrom rule and tests.

2009-01-30  Jb Evain  <jbevain@novell.com>

	* DoNotUseEnumIsAssignableFromRule.cs: add new rule.

2009-01-20  Jesse Jones  <jesjones@mindspring.com>

	* PreferSafeHandleRule.cs: Added.

2008-12-23  Cedric Vivier  <cedricv@neonux.com>

	* CloneMethodShouldNotReturnNull.cs:
	* ToStringReturnsNullRule.cs:
	* PreferEmptyInstanceOverNullRule.cs:
	* ReturnNullRule.cs: Improve text and consistency between ReturnNullRule inheritors.
	* ToStringReturnsNullRule.cs: Rename to ToStringShouldNotReturnNullRule.

2008-12-23  Cedric Vivier  <cedricv@neonux.com>

	* PreferEmptyInstanceOverNullRule.cs: New. This rule checks that
	methods/properties returning a string, an array, a collection, or
	an enumerable, do not return null.

2008-12-13  Jesse Jones  <jesjones@mindspring.com> 

	* ObsoleteMessagesShouldNotBeEmptyRule.cs, 
	CloneMethodShouldNotReturnNullRule.cs, 
	GetEntryAssemblyMayReturnNullRule.cs, 
	DisableDebuggingCodeRule.cs: Fix AnalyzeModule so that it 
	activates the rule properly when multiple assemblies or modules are 
	being checked.

2008-12-09  Jesse Jones  <jesjones@mindspring.com>

	* AvoidAssemblyVersionMismatchRule.cs: Tweaked the language in the
	description.

2008-12-02  Sebastien Pouliot  <sebastien@ximian.com>
